--- a/pc-shop.html
+++ b/pc-shop.html
@@ -23,67 +23,55 @@
   <script>
     // DBからとってきたと仮定して
     let personalComputers = [
-      {
-        displayName: "",
-        maker: "MicroSoft",
-        機種: "Surface",
-        シリアル番号: "1231-ADAA-1231",
-        値段: 100000,
-        画像: "https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE3oQuB"
-      },
-      {
-        displayName: "",
-        maker: "Apple",
-        機種: "Mac Book Pro",
-        シリアル番号: "1231-ADAA-345364",
-        値段: 160000,
-        画像: "https://www.pc-koubou.jp/kaitori/re/images/macbook_icon_01.png"
-      },
-      {
-        displayName: "",
-        maker: "東芝",
-        機種: "NoteBook",
-        シリアル: "4253-ADAA-AFEW",
-        price: 210000,
-        画像: "https://img1.kakaku.k-img.com/images/productimage/fullscale/K0001248408.jpg"
-      }
+      { maker: "MicroSoft", 機種: "Surface", 値段: 100000 },
+      { maker: "Apple", 機種: "Mac BooK Pro", 値段: 80000 },
+      { maker: "Apple", 機種: "Mac BooK Pro", 値段: 60000 },
+      { maker: "Apple", 機種: "Mac BooK Air", 値段: 120000 },
+      { maker: "MicroSoft", 機種: "Surface", 値段: 200000 },
+      { maker: "東芝", 機種: "Lenobo", 値段: 300000 },
+      { maker: "東芝", 機種: "Lenobo", 値段: 400000 },
+      { maker: "Google", 機種: "ChromeBook", 値段: 98000 },
+      { maker: "Google", 機種: "ChromeBook", 値段: 30000 },
+      { maker: "Apple", 機種: "Mac BooK Air", 値段: 130000 },
+      { maker: "Apple", 機種: "iMac", 値段: 530000 },
     ]
 
-    let mouses = [
-      {
-        maker: "LogiCool",
-        機種: "M501",
-        price: 5000,
-        画像: "https://img1.kakaku.k-img.com/images/productimage/fullscale/K0001248408.jpg",
-        重さ: "",
-        有線: "いいえ"
-      },
-      {
-        maker: "LogiCool",
-        機種: "M502",
-        price: 5000,
-        画像: "https://img1.kakaku.k-img.com/images/productimage/fullscale/K0001248408.jpg",
-        重さ: "",
-        有線: false
-      },
-    ]
-    let monitors = []
+    function comparePrice(a, b) {
+      return a.値段 - b.値段
+    }
+
+    function compareMaker(a, b) {
+      var nameA = a.maker.toUpperCase(); // 大文字と小文字を無視する
+      var nameB = b.maker.toUpperCase(); // 大文字と小文字を無視する
+ 
+      if (nameA < nameB) {
+        return -1;
+      }
+      if (nameA > nameB) {
+        return 1;
+      }
+      // names must be equal
+      return 0;
+    }
+
+    personalComputers.sort((a, b) => {
+      var nameA = a.maker.toUpperCase(); // 大文字と小文字を無視する
+      var nameB = b.maker.toUpperCase(); // 大文字と小文字を無視する
+      if (nameA < nameB) return -1;
+      if (nameA > nameB) return 1;
+      return 0;
+    })
 
     const PC_LIST = document.getElementById("pc-list")
-    const MOUSE_LIST = document.getElementById("mouse-list")
 
     // パソコンのデータを画面に表示する関数(クラスっぽいもの)
     function PC_INFORMATION (item, rootObject) 
     {
       // データ
       this.rootObject = rootObject
-      this.displayName = item.displayName
       this.maker = item.maker
-      this.シリアル番号 = item.シリアル番号
       this.値段 = item.値段
-      this.画像1 = item.画像
-      this.画像2 = item.画像
-      this.category = "パソコン"
+      this.機種 = item.機種
 
       // 見た目の部分
       const SECTION = document.createElement("section")
@@ -91,50 +79,10 @@
 
       SECTION.innerHTML = `
         <h2 class="itemName"> ${this.maker} </h2>
-        <h4 class="itemDescriptin"> ${this.maker} </h4>
-        <p class="itemPrice"> ${this.値段} </p>
-        <p class="itemImage">
-          商品の画像
-          <img width="400" src="${this.画像1}"> 
-          <img width="400" src="${this.画像2}"> 
-        </p>
-        <span>${this.category}</span>
+        <h4 class="itemDescriptin"> ${this.機種} </h4>
+        <p class="itemPrice"> ¥${this.値段.toLocaleString()} </p>
       `
       this.rootObject.append(SECTION)
-    }
-
-    // マウスのデータを画面に表示する関数
-    function MOUSE_INFOMATION(item, rootObject){
-      // データ
-      this.rootObject = rootObject
-      this.displayName = item.displayName
-      this.maker = item.maker
-      this.機種 = item.機種
-      this.price = item.price
-      this.画像 = item.画像
-      this.category = "マウス"
-      this.有線 = item.有線
-
-      // 見た目の部分
-      const SECTION = document.createElement("section")
-      SECTION.style.backgroundColor = "#EEBBEE"
-
-      SECTION.innerHTML = `
-        <h2 class="itemName"> ${this.maker} </h2>
-        <h4 class="itemDescriptin"> ${this.maker} </h4>
-        <p class="itemPrice"> ${this.値段} </p>
-        <p class="itemImage">
-          商品の画像
-          <img width="400" src="${this.画像}"> 
-        </p>
-        <span>${this.category}</span>
-      `
-      this.rootObject.append(SECTION)
-    }
-
-    // モニターのデータを画面に表示する関数
-    function MONITOR_INFOMATION(item, rootObject){
-
     }
 
     // new をつけてこの関数を引数つけて呼び出すと、新しいオブジェクトが作られる
@@ -142,17 +90,7 @@
 
     for (let i=0; i<personalComputers.length; i++) {
       let item = personalComputers[i]
-      let obj = new PC_INFORMATION(item, PC_LIST)
-    }
-
-    for (let i=0; i<mouses.length; i++) {
-      let item = mouses[i]
-      let obj = new MOUSE_INFOMATION(item, MOUSE_LIST)
-    }
-
-    for (let i=0; i<monitors.length; i++) {
-      let item = monitors[i]
-      let obj = new MONITOR_INFOMATION(item, PC_LIST)
+      new PC_INFORMATION(item, PC_LIST)
     }
   </script>
 </body>
